# libdatadog-nodejs

./: .gitignore  .npmignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE-3rdparty.csv  NOTICE  README  README.md  SECURITY.md  change-buffer-build.sh  eslint.config.js  global.js  index.js  license-tool.toml  load.js  package-lock.json  package.json  rust-toolchain.toml  test-wasm.js  test.js  test_wasm.js
.cargo/: config.toml
.devcontainer/alpine/: Dockerfile-alpine  devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/actions/build-test-wasm/: action.yaml
.github/chainguard/: self.github.release.push-tags.sts.yaml
.github/workflows/: build.yml  package-size.yml  release.yml
collector/src/: lib.rs
crates/capabilities/: Cargo.toml
crates/capabilities-test/: Cargo.toml
crates/capabilities-test/src/: lib.rs
crates/capabilities/src/: http.rs  http_transport.js  lib.rs  sleep.rs  sleep_transport.js  spawn.rs
crates/collector/: Cargo.toml
crates/collector/src/: lib.rs
crates/crashtracker/: Cargo.toml
crates/crashtracker/src/: lib.rs  unhandled_exception.rs
crates/datadog-js-zstd/: Cargo.toml
crates/datadog-js-zstd/src/: lib.rs
crates/libdd-wasm-runtime/: Cargo.toml
crates/libdd-wasm-runtime/src/: lib.rs
crates/library-config/: Cargo.toml  index.d.ts
crates/library-config/src/: lib.rs
crates/library_config/: Cargo.toml
crates/library_config/src/: lib.rs
crates/pipeline/: Cargo.toml
crates/pipeline-native/: Cargo.toml
crates/pipeline-native/src/: lib.rs  span_bytes.rs  span_string.rs  trace_data.rs
crates/pipeline/src/: change_buffer.rs  lib.rs  native_span.rs  span_bytes.rs  span_string.rs  stats.rs  trace.rs  trace_data.rs  utils.rs
crates/process_discovery/: Cargo.toml
crates/process_discovery/src/: lib.rs
crates/trace_exporter/: Cargo.toml
crates/trace_exporter/src/: lib.rs
pipeline/src/: lib.rs
scripts/: build-wasm.js  copy-artifacts.js  test.sh
src/: collector.rs  crashtracker.rs  data_pipeline.rs  lib.rs
test/: crashtracker.js  http_transport.js  pipeline.js  process-discovery.js  process_discovery.js
test/crashtracker/: .gitignore  Cargo.toml  app-seg-fault.js  app-uncaught-exception-non-error.js  app-uncaught-exception.js  app-unhandled-exception.js  app-unhandled-rejection-non-error.js  app-unhandled-rejection.js  app.js  binding.gyp  index.js  package-lock.json  package.json  segfault.c  setup.js  test-utils.js  test_utils.js
test/crashtracker/src/: lib.rs
test/library-config/: README.md  config.yaml  index.js  package.json
test/napi-constructor-bypass/: Cargo.toml  test-binding.node  test-binding.rs  test.js
test/napi-constructor-bypass/src/: lib.rs
test/wasm/capabilities-test/: index.js
test/wasm/datadog-js-zstd/: index.js
test/wasm/library_config/: README.md  config_local_phase1.yaml  config_managed_phase2.yaml  index.js
test/wasm/pipeline/: index.js
test/wasm/trace_exporter/: index.js
v0.9.2-dev/: crashtracker-napi.node
