[workspace]
resolver = "2"
default-members = [
  "crates/crashtracker",
  "crates/process_discovery",
]
members = [
  "crates/*",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = "none"
debug = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch."https://github.com/DataDog/libdatadog.git"]
libdd-trace-utils = { path = "/home/yannhamdaoui/dd/libdatadog-jsperf/libdd-trace-utils" }
libdd-capabilities = { path = "/home/yannhamdaoui/dd/libdatadog-jsperf/libdd-capabilities" }
libdd-data-pipeline = { path = "/home/yannhamdaoui/dd/libdatadog-jsperf/libdd-data-pipeline" }
libdd-trace-protobuf = { path = "/home/yannhamdaoui/dd/libdatadog-jsperf/libdd-trace-protobuf" }
libdd-trace-stats = { path = "/home/yannhamdaoui/dd/libdatadog-jsperf/libdd-trace-stats" }
libdd-common = { path = "/home/yannhamdaoui/dd/libdatadog-jsperf/libdd-common" }
libdd-tinybytes = { path = "/home/yannhamdaoui/dd/libdatadog-jsperf/libdd-tinybytes" }
libdd-trace-normalization = { path = "/home/yannhamdaoui/dd/libdatadog-jsperf/libdd-trace-normalization" }
libdd-dogstatsd-client = { path = "/home/yannhamdaoui/dd/libdatadog-jsperf/libdd-dogstatsd-client" }
libdd-ddsketch = { path = "/home/yannhamdaoui/dd/libdatadog-jsperf/libdd-ddsketch" }


