[package]
name = "libdd-capabilities-impl"
version = "0.1.0"
edition = "2018"

# Same package name and version as the native crate in libdatadog.
# libdatadog-nodejs's [patch.crates-io] swaps this in when building for wasm.

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde_json = "1.0"
libdd-capabilities = { git = "https://github.com/DataDog/libdatadog.git", branch = "jwiriath/capability-traits-architecture" }

[dev-dependencies]
wasm-bindgen-test = "0.3"
