[package]
name = "collector"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
collector = { git = "https://github.com/DataDog/libdatadog.git", branch = "rochdev/collector"  }

[dependencies.neon]
version = "1.0.0"
default-features = false
features = ["napi-6"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
strip = "debuginfo"
