[package]
name = "crashtracker"
version = "0.2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "crashtracker-receiver"
path = "src/bin/receiver.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
libdd-crashtracker = { git = "https://github.com/DataDog/libdatadog.git", rev = "353134770b312b7ccd2df6afabc253090b948e5f" }
napi = { version = "2", features = ["serde-json"] }
napi-derive = { version = "2", default-features = false }
rustls = { version = "*", default-features = false, features = ["aws-lc-rs"] }
backtrace = { version = "=0.3.74" } # Can be removed when libdatadog is updated to 18.1.0 or later
