[package]
name = "crashtracker"
version = "0.2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "crashtracker-receiver"
path = "src/bin/receiver.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
libdd-crashtracker = { git = "https://github.com/DataDog/libdatadog.git", tag = "v26.0.0"  }
napi = { version = "2", features = ["serde-json"] }
napi-derive = { version = "2", default-features = false }
rustls = { version = "*", default-features = false, features = ["aws-lc-rs"] }
