[package]
name = "libdd-wasm-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.209", features = ["derive"] }
futures = "0.3"

http = "1.0"
http-body = "1.0"
bytes = "1.6"
anyhow = "1.0"

# paullgdc/data-pipeline/runtime_agnostisc_code
libdd-common ={ git = "https://github.com/DataDog/libdatadog.git", rev = "211d2d38d693e099ce03bf4476e8b40da2226628" }
