[package]
name = "library-config"
version = "0.2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
datadog-library-config = { git = "https://github.com/DataDog/libdatadog.git", rev = "3e4c8acba64317de11ccd85e44bf1d07ff06a4d7" }

wasm-bindgen = "0.2.100"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
