[package]
name = "pipeline"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libdd-data-pipeline = { git = "https://github.com/DataDog/libdatadog.git", rev = "353134770b312b7ccd2df6afabc253090b948e5f", default-features = false }
libdd-trace-utils = { git = "https://github.com/DataDog/libdatadog.git", rev = "353134770b312b7ccd2df6afabc253090b948e5f", default-features = false }
serde = { version = "1.0", features = ["derive"] }
napi = { version = "3.3", features = ["napi6", "async"] }
napi-derive = { version = "3", default-features = false }
