[package]
name = "pipeline"
version = "0.1.0"
edition = "2021"
description = "Wasm binding for pipeline span management and trace export"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
libdatadog-nodejs-capabilities = { path = "../capabilities" }
libdd-capabilities = { git = "https://github.com/DataDog/libdatadog.git", branch = "bengl/capability-on-change-buffer" }
libdd-data-pipeline = { git = "https://github.com/DataDog/libdatadog.git", branch = "bengl/capability-on-change-buffer", default-features = false }
libdd-trace-utils = { git = "https://github.com/DataDog/libdatadog.git", branch = "bengl/capability-on-change-buffer", default-features = false, features = ["change-buffer"] }
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
