[package]
name = "segfault"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
napi = { version = "2", features = ["serde-json"] }
napi-derive = { version = "2", default-features = false }
